fixed invisible text in search bar

--- a/themes/monterail.css
+++ b/themes/monterail.css
@@ -101,6 +101,10 @@
 	color: var(--monterail-text-color) !important;
 }
 
+.searchBox, .searchBox * {
+	color: var(--monterail-text-color) !important;
+}
+
 .mail-toolbox {
 	-moz-appearance: none !important;
 	background: var(--monterail-light-background) !important;
